# wallhack-cs2

./: CMakeLists.txt  README.md  note.md  offsets.json
src/: main.cpp
src/config/: remote_offsets.cpp  remote_offsets.hpp
src/game/: entity.cpp  entity.hpp  offsets.hpp
src/math/: math_utils.cpp  math_utils.hpp  vec3.hpp
src/memory/: memory.cpp  memory.hpp
src/overlay/: overlay.cpp  overlay.hpp
src/renderer/: renderer.cpp  renderer.hpp
